local order book impl